[gd_scene load_steps=11 format=3 uid="uid://uebno7qed4ai"]

[ext_resource type="Script" path="res://scenes/world/shop_interface/shop_interface.gd" id="1_jliga"]
[ext_resource type="Texture2D" uid="uid://by7uwi2gck71r" path="res://assets/sprites/world/shop/shop_interface_bg.png" id="2_vpr4f"]
[ext_resource type="Texture2D" uid="uid://by2povxwimsk2" path="res://assets/sprites/world/shop/back.png" id="3_vwn54"]
[ext_resource type="Texture2D" uid="uid://f06aw5wjfy6u" path="res://assets/sprites/world/shop/shop_interface_confirm.png" id="3_wtc5s"]
[ext_resource type="Theme" uid="uid://cjd3w2r2wb0b7" path="res://scripts/transparentbutton.tres" id="4_uesth"]
[ext_resource type="Texture2D" uid="uid://c56q03ncdbhy7" path="res://assets/sprites/world/shop/shop_interface_minus.png" id="5_qo0dn"]
[ext_resource type="Texture2D" uid="uid://ciaeyliy6ki4g" path="res://assets/sprites/world/shop/shop_interface_plus.png" id="6_tf223"]
[ext_resource type="FontFile" uid="uid://rvc8fsmsm28m" path="res://font.ttf" id="7_ajfgk"]

[sub_resource type="LabelSettings" id="LabelSettings_gjjlf"]
font = ExtResource("7_ajfgk")
font_size = 8
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1ja2o"]
font = ExtResource("7_ajfgk")
font_size = 8
font_color = Color(0, 0, 0, 1)

[node name="ShopInterface" type="CanvasLayer"]
script = ExtResource("1_jliga")

[node name="shop_interface" type="Sprite2D" parent="."]
position = Vector2(160, 85)
texture = ExtResource("2_vpr4f")
hframes = 6
frame = 4

[node name="next_button" type="Sprite2D" parent="shop_interface"]
position = Vector2(78, -32)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_vwn54")
flip_h = true
hframes = 2

[node name="next_button" type="Button" parent="shop_interface/next_button"]
offset_left = -6.0
offset_top = -12.0
offset_right = 11.0
offset_bottom = 5.0
theme = ExtResource("4_uesth")

[node name="back_button" type="Sprite2D" parent="shop_interface"]
position = Vector2(81, -32)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_vwn54")
hframes = 2

[node name="back_button" type="Button" parent="shop_interface/back_button"]
offset_left = -11.0
offset_top = -11.0
offset_right = 6.0
offset_bottom = 5.0
theme = ExtResource("4_uesth")

[node name="minus" type="Sprite2D" parent="shop_interface"]
position = Vector2(63, 2)
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_qo0dn")
hframes = 2

[node name="minus" type="Button" parent="shop_interface/minus"]
offset_left = -5.71429
offset_top = -5.71429
offset_right = 5.28571
offset_bottom = 5.28571
theme = ExtResource("4_uesth")

[node name="minus2" type="Sprite2D" parent="shop_interface"]
position = Vector2(64, 26)
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_qo0dn")
hframes = 2

[node name="minus2" type="Button" parent="shop_interface/minus2"]
offset_left = -6.0
offset_top = -6.0
offset_right = 5.0
offset_bottom = 5.0
theme = ExtResource("4_uesth")

[node name="plus" type="Sprite2D" parent="shop_interface"]
position = Vector2(81, 2)
scale = Vector2(0.7, 0.7)
texture = ExtResource("6_tf223")
hframes = 2

[node name="plus" type="Button" parent="shop_interface/plus"]
offset_left = -5.58801
offset_top = -5.58802
offset_right = 5.41199
offset_bottom = 5.41198
theme = ExtResource("4_uesth")

[node name="plus2" type="Sprite2D" parent="shop_interface"]
position = Vector2(81, 26)
scale = Vector2(0.7, 0.7)
texture = ExtResource("6_tf223")
hframes = 2

[node name="plus2" type="Button" parent="shop_interface/plus2"]
offset_left = -6.0
offset_top = -6.0
offset_right = 5.0
offset_bottom = 5.0
theme = ExtResource("4_uesth")

[node name="health_potion_quantity" type="Label" parent="shop_interface"]
anchors_preset = -1
anchor_right = 0.102
anchor_bottom = 0.162
offset_left = 68.0
offset_top = -9.0
offset_right = 58.416
offset_bottom = -1.552
text = "0"
label_settings = SubResource("LabelSettings_gjjlf")
horizontal_alignment = 1
vertical_alignment = 1
max_lines_visible = 1

[node name="invin_potion_quantity" type="Label" parent="shop_interface"]
offset_left = 68.0
offset_top = 16.0
offset_right = 77.0
offset_bottom = 39.0
text = "0"
label_settings = SubResource("LabelSettings_1ja2o")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="confirm_action" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(160, 85)
texture = ExtResource("3_wtc5s")
hframes = 3

[connection signal="pressed" from="shop_interface/next_button/next_button" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="shop_interface/back_button/back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="shop_interface/minus/minus" to="." method="_on_minus_pressed"]
[connection signal="pressed" from="shop_interface/minus2/minus2" to="." method="_on_minus_2_pressed"]
[connection signal="pressed" from="shop_interface/plus/plus" to="." method="_on_plus_pressed"]
[connection signal="pressed" from="shop_interface/plus2/plus2" to="." method="_on_plus_2_pressed"]
